<resources>
    <string name="app_name">utils_android</string>
    <string name="date_filter_from_title">Starts from:</string>
    <string name="filter_picker_from_hint">From</string>
    <string name="date_filter_to_title">To:</string>
    <string name="date_filter_picker_to_hint">To</string>
    <string name="date_filter_clear_filters">Clear</string>
    <string name="text_cancel">Cancel</string>
    <string name="text_ok">OK</string>
</resources>
